# virsh-sandbox

./: README.md  docker-compose.yml  lefthook.yaml
examples/agent-example/: .env.example  README.md  client.py  configuration.py  main.py  pyproject.toml  tools.py
examples/agent-example/sdk/: README.md  pyproject.toml  setup.py
examples/agent-example/sdk/.openapi-generator/: FILES
examples/agent-example/sdk/docs/: AnsibleApi.md  HealthApi.md  InternalAnsibleJob.md  InternalAnsibleJobRequest.md  InternalAnsibleJobResponse.md  InternalAnsibleJobStatus.md  InternalRestCreateSandboxRequest.md  InternalRestCreateSandboxResponse.md  InternalRestDiffRequest.md  InternalRestDiffResponse.md  InternalRestErrorResponse.md  InternalRestGenerateResponse.md  InternalRestInjectSSHKeyRequest.md  InternalRestListVMsResponse.md  InternalRestPublishRequest.md  InternalRestPublishResponse.md  InternalRestRunCommandRequest.md  InternalRestRunCommandResponse.md  InternalRestSnapshotRequest.md  InternalRestSnapshotResponse.md  InternalRestStartSandboxRequest.md  InternalRestStartSandboxResponse.md  InternalRestVmInfo.md  SandboxApi.md  TimeDuration.md  VMsApi.md  VirshSandboxInternalAnsibleJob.md  VirshSandboxInternalAnsibleJobRequest.md  VirshSandboxInternalAnsibleJobResponse.md  VirshSandboxInternalAnsibleJobStatus.md  VirshSandboxInternalErrorErrorResponse.md  VirshSandboxInternalRestCreateSandboxRequest.md  VirshSandboxInternalRestCreateSandboxResponse.md  VirshSandboxInternalRestDiffRequest.md  VirshSandboxInternalRestDiffResponse.md  VirshSandboxInternalRestErrorResponse.md  (+23 more)
(+639 files in other folders)
