[project]
name = "virsh-sandbox-agent"
version = "0.1.0"
description = "AI Agent for working on sys-admin tasks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.14.0",
    "requests>=2.32.5",
    "urllib3>=2.1.0,<3.0.0",
    "python-dateutil>=2.8.2",
    "pydantic>=2",
    "typing-extensions>=4.7.1",
    "virsh-sandbox>=0.0.9b0",
    "dotenv>=0.9.9",
]
